# spaccbench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: extending.md
examples/: 01_evaluate_LIANA_on_THA.ipynb
spaccbench/: __init__.py  cli.py  evaluate.py  lr_db.py  scenarios.py
spaccbench/adapters/: __init__.py  _csv_backed.py  _stubs.py  base.py  commot.py  liana.py
spaccbench/core/: __init__.py  composite.py  d1_detection.py  d2_fidelity.py  d3_spatial.py  d4_pathway.py
tests/: test_adapters.py  test_cli.py  test_composite.py  test_d1_detection.py  test_d2_fidelity.py  test_d3_spatial.py  test_d4_pathway.py
tools/: README.md  build_adapter_scores.py  build_scenario.py
